--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "@actions/core": "^1.2.1",
-    "@actions/exec": "^1.0.3",
-    "aws-sdk": "^2.608.0"
+    "@actions/exec": "^1.0.3"
   },
   "devDependencies": {
-    "@zeit/ncc": "^0.21.0"
+    "@zeit/ncc": "^0.21.0",
+    "aws-sdk": "^2.1352.0"
   }
 }
